--- a/.github/workflows/branch.yaml
+++ b/.github/workflows/branch.yaml
@@ -16,6 +16,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
+          token: ${{ secrets.ACTIONS_TOKEN }}  # シークレットトークンを指定
           branch: main
           title: 'Auto Pull Request from ${{ github.ref }}'
           body: 'This pull request is automatically created by a GitHub Action.'
